aws/configurations/eks/aws-load-balancer-controller/demo-alb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: generator
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/load-balancer-name: my-app-load-balancer
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /name
          pathType: Prefix
          backend:
            service:
              name: names
              port:
                number: 80
        - path: /number
          pathType: Prefix
          backend:
            service:
              name: numbers
              port:
                number: 80
